Fix a number of functional regressions caused by enabling the Metal ANGLE backend by default. https://bugs.webkit.org/show_bug.cgi?id=220895 <rdar://problem/73539537>

Patch by Kyle Piddington <kpiddington@apple.com> on 2021-02-19
Reviewed by Kenneth Russell.

Fixed webgl/1.0.3/conformance/context/context-hidden-alpha.html

MTL Translator direct fixes for webgl/1.0.3/conformance/glsl/constructors/glsl-construct-*vec2 tests, Plus fix for GL_VertexIndex

Fix EmitMetal crash for missing function textureRect.

Additional fixes for 73675990, shaders-with-invariance.html, shaders-with-uniform-structs.html, struct-specifiers-in-uniforms.html, framebuffer-object-attachment.html

Fixed clamping of array elements.

* ANGLE.xcodeproj/project.pbxproj:
* src/compiler/translator/TranslatorMetalDirect.cpp:
(sh::TranslatorMetalDirect::translateImpl):
* src/compiler/translator/TranslatorMetalDirect/EmitMetal.cpp:
(GenMetalTraverser::emitPostQualifier):
(GenMetalTraverser::visitBinary):
(GenMetalTraverser::BuildFuncToName):
* src/compiler/translator/TranslatorMetalDirect/FixTypeConstructors.cpp: Added.
(sh::FixTypeTraverser::FixTypeTraverser):
(sh::FixTypeConstructors):
* src/compiler/translator/TranslatorMetalDirect/FixTypeConstructors.h: Added.
* src/compiler/translator/TranslatorMetalDirect/NameEmbeddedUniformStructsMetal.cpp: Added.
(sh::NameEmbeddedStructUniformsMetal):
* src/compiler/translator/TranslatorMetalDirect/NameEmbeddedUniformStructsMetal.h: Added.
* src/compiler/translator/TranslatorMetalDirect/Pipeline.cpp:
(SaturateVectorOf):
* src/compiler/translator/TranslatorMetalDirect/ProgramPrelude.cpp:
(sh::ProgramPrelude::ProgramPrelude):
* src/compiler/translator/TranslatorMetalDirect/ReduceInterfaceBlocks.cpp:
(sh::Reducer::Reducer):
(sh::ReduceInterfaceBlocks):
* src/compiler/translator/TranslatorMetalDirect/ReduceInterfaceBlocks.h:
* src/compiler/translator/TranslatorMetalDirect/SeparateCompoundStructDeclarations.cpp:
* src/libANGLE/renderer/load_functions_table_autogen.cpp:
* src/libANGLE/renderer/metal/ContextMtl.mm:
(rx::ContextMtl::drawElementsImpl):
* src/libANGLE/renderer/metal/IOSurfaceSurfaceMtl.h:
* src/libANGLE/renderer/metal/IOSurfaceSurfaceMtl.mm:
(rx::IOSurfaceSurfaceMtl::IOSurfaceSurfaceMtl):
(rx::IOSurfaceSurfaceMtl::createBackingTexture):
* src/libANGLE/renderer/metal/RenderBufferMtl.mm:
(rx::RenderbufferMtl::setStorageImpl):
* src/libANGLE/renderer/metal/VertexArrayMtl.h:
* src/libANGLE/renderer/metal/VertexArrayMtl.mm:
(rx::VertexArrayMtl::getIndexBuffer):
(rx::VertexArrayMtl::convertIndexBuffer):
(rx::VertexArrayMtl::streamIndexBufferFromClient):
* src/libANGLE/renderer/metal/mtl_utils.mm:
(rx::mtl::InitializeDepthStencilTextureContentsGPU):
* src/libANGLE/renderer/metal/shaders/blit.metal:
* src/libANGLE/renderer/metal/shaders/mtl_default_shaders_src_autogen.inc:

Canonical link: https://commits.webkit.org/234374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@273188 268f45cc-cd09-0410-ab3c-d52691b4dbfc