Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect.cpp
@@ -27,12 +27,13 @@
 #include "compiler/translator/TranslatorMetalDirect/RewriteUnaddressableReferences.h"
 #include "compiler/translator/TranslatorMetalDirect/SeparateCompoundExpressions.h"
 #include "compiler/translator/TranslatorMetalDirect/SeparateCompoundStructDeclarations.h"
+#include "compiler/translator/TranslatorMetalDirect/FixTypeConstructors.h"
 #include "compiler/translator/TranslatorMetalDirect/SymbolEnv.h"
 #include "compiler/translator/TranslatorMetalDirect/ToposortStructs.h"
 #include "compiler/translator/TranslatorMetalDirect/WrapMain.h"
 #include "compiler/translator/TranslatorMetalUtils.h"
 #include "compiler/translator/tree_ops/InitializeVariables.h"
-#include "compiler/translator/tree_ops/NameEmbeddedUniformStructs.h"
+#include "compiler/translator/TranslatorMetalDirect/NameEmbeddedUniformStructsMetal.h"
 #include "compiler/translator/tree_ops/RemoveAtomicCounterBuiltins.h"
 #include "compiler/translator/tree_ops/RemoveInactiveInterfaceVariables.h"
 #include "compiler/translator/tree_ops/RewriteAtomicCounters.h"
@@ -602,6 +603,19 @@ void AddFragDepthDeclaration(TIntermBlock &root, TSymbolTable &symbolTable)
                           TIntermSequence{new TIntermDeclaration{BuiltInVariable::gl_FragDepth()}});
 }
 
+void AddFragDepthEXTDeclaration(TCompiler &compiler, TIntermBlock &root, TSymbolTable &symbolTable)
+{   
+    const TIntermSymbol *glFragDepthExt = FindSymbolNode(&root, ImmutableString("gl_FragDepthEXT"));
+    ASSERT(glFragDepthExt);
+
+    // Replace gl_FragData with our globally defined fragdata.
+    if (!ReplaceVariable(&compiler, &root, &(glFragDepthExt->variable()), BuiltInVariable::gl_FragDepth()))
+    {
+        return;
+    }
+    AddFragDepthDeclaration(root, symbolTable);
+}
+
 ANGLE_NO_DISCARD bool AddFragDataDeclaration(TCompiler &compiler, TIntermBlock &root)
 {
     TSymbolTable &symbolTable = compiler.getSymbolTable();
@@ -939,7 +953,7 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
 
     if (aggregateTypesUsedForUniforms > 0)
     {
-        if (!NameEmbeddedStructUniforms(this, &root, &symbolTable))
+        if (!NameEmbeddedStructUniformsMetal(this, &root, &symbolTable))
         {
             return false;
         }
@@ -1105,6 +1119,7 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
         bool usesFragColor = false;
         bool usesFragData  = false;
         bool usesFragDepth = false;
+        bool usesFragDepthEXT = false;
         for (const ShaderVariable &outputVarying : mOutputVariables)
         {
             if (outputVarying.isBuiltIn())
@@ -1120,6 +1135,10 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
                 else if (outputVarying.name == "gl_FragDepth")
                 {
                     usesFragDepth = true;
+                }
+                else if (outputVarying.name == "gl_FragDepthEXT")
+                {
+                    usesFragDepthEXT = true;
                 }
             }
         }
@@ -1141,8 +1160,11 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
                 return false;
             }
         }
-
-        if (usesFragDepth)
+        if(usesFragDepthEXT)
+        {
+            AddFragDepthEXTDeclaration(*this, root, symbolTable);
+        }
+        else if (usesFragDepth)
         {
             AddFragDepthDeclaration(root, symbolTable);
         }
@@ -1214,6 +1236,15 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
         if (FindSymbolNode(&root, BuiltInVariable::gl_VertexIndex()->name()))
         {
             if (!ReplaceVariable(this, &root, BuiltInVariable::gl_VertexIndex(),
+                                 &kgl_VertexIndexMetal))
+            {
+                return false;
+            }
+            DeclareRightBeforeMain(root, kgl_VertexIndexMetal);
+        }
+        else if (FindSymbolNode(&root, BuiltInVariable::gl_VertexID()->name()))
+        {
+            if (!ReplaceVariable(this, &root, BuiltInVariable::gl_VertexID(),
                                  &kgl_VertexIndexMetal))
             {
                 return false;
@@ -1319,7 +1350,7 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
         return false;
     }
 
-    if (!ReduceInterfaceBlocks(*this, root))
+    if (!ReduceInterfaceBlocks(*this, root, idGen))
     {
         return false;
     }
@@ -1377,12 +1408,16 @@ bool TranslatorMetalDirect::translateImpl(TIntermBlock &root, ShCompileOptions c
     {
         return false;
     }
+    if(!FixTypeConstructors(*this, symbolEnv, root))
+    {
+        return false;
+    }
 
     if (!ToposortStructs(*this, symbolEnv, root, ppc))
     {
         return false;
     }
-
+ 
     if (!EmitMetal(*this, root, idGen, pipelineStructs, invariants, symbolEnv, ppc))
     {
         return false;
