Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/EmitMetal.cpp
@@ -355,7 +355,8 @@ static const char *GetOperatorString(TOperator op,
         case TOperator::EOpEqual:
             if ((argType0->isVector() && argType1->isVector()) ||
                 (argType0->getStruct() && argType1->getStruct()) ||
-                (argType0->isArray() && argType1->isArray()))
+                (argType0->isArray() && argType1->isArray()) ||
+                (argType0->isMatrix() && argType1->isMatrix()))
 
             {
                 return "ANGLE_equal";
@@ -365,7 +366,8 @@ static const char *GetOperatorString(TOperator op,
 
         case TOperator::EOpNotEqual:
             if ((argType0->isVector() && argType1->isVector()) ||
-                (argType0->isArray() && argType1->isArray()))
+                (argType0->isArray() && argType1->isArray())||
+                (argType0->isMatrix() && argType1->isMatrix()))
             {
                 return "ANGLE_notEqual";
             }
@@ -933,7 +935,7 @@ void GenMetalTraverser::emitPostQualifier(const EmitVariableDeclarationConfig &e
     }
 
     const bool isInvariant =
-        decl.isField() ? mInvariants.contains(decl.field()) : mInvariants.contains(decl.variable());
+        (decl.isField() ? mInvariants.contains(decl.field()) : mInvariants.contains(decl.variable())) && (qualifier == TQualifier::EvqPosition || qualifier == TQualifier::EvqFragCoord);
 
     if (isInvariant)
     {
@@ -1547,9 +1549,34 @@ bool GenMetalTraverser::visitBinary(Visit, TIntermBinary *binaryNode)
         case TOperator::EOpIndexDirect:
         case TOperator::EOpIndexIndirect:
         {
+            TType leftType = leftNode.getType();
             groupedTraverse(leftNode);
             mOut << "[";
-            rightNode.traverse(this);
+            {
+                mOut << "ANGLE_int_clamp(";
+                groupedTraverse(rightNode);
+                mOut << ", 0, ";
+                if(leftType.isUnsizedArray())
+                {
+                    groupedTraverse(leftNode);
+                    mOut << ".size()";
+                }
+                else
+                {
+                    int maxSize;
+                    if (leftType.isArray())
+                    {
+                        maxSize = static_cast<int>(leftType.getOutermostArraySize()) - 1;
+                    }
+                    else
+                    {
+                        maxSize = leftType.getNominalSize() - 1;
+                    }
+                    mOut << maxSize;
+                }
+                mOut << ")";
+
+            }
             mOut << "]";
         }
         break;
@@ -1868,7 +1895,9 @@ GenMetalTraverser::FuncToName GenMetalTraverser::BuildFuncToName()
     putAngle("texture2D");
     putAngle("texture2DLod");
     putAngle("texture2DProj");
+    putAngle("texture2DRect");
     putAngle("texture2DProjLod");
+    putAngle("texture2DRectProj");
     putAngle("texture3D");
     putAngle("texture3DLod");
     putAngle("texture3DProjLod");
