Source/ThirdParty/ANGLE/src/compiler/translator/TranslatorMetalDirect/Pipeline.cpp
@@ -298,7 +298,8 @@ static int SaturateVectorOf(const TField &field)
     ASSERT(type.isScalar() || type.isVector());
 
     const bool cond = type.getBasicType() == BT && !type.isArray() &&
-                      CompareBy(Cmp, type.getNominalSize(), MatchDim);
+                      CompareBy(Cmp, type.getNominalSize(), MatchDim) && type.getQualifier() != TQualifier::EvqFragDepth;
+
 
     if (cond)
     {
